--- a/_posts/2018-06-26-test.markdown
+++ b/_posts/2018-06-26-test.markdown
@@ -1,6 +1,6 @@
 ---
-layout: post
-title:  "Welcome to Jekyll!"
+layout: post_test
+title:  "test to Jekyll!"
 date:   2018-06-26 01:17:10 -0700
 categories: jekyll update
 ---
